--- a/.github/workflows/main_tws-frontend.yml
+++ b/.github/workflows/main_tws-frontend.yml
@@ -3,50 +3,44 @@
 
 name: Build and deploy Node.js app to Azure Web App - tws-frontend
 
-# Run the workflow whenever change is pushed into the main branch
 on:
   push:
     branches:
       - main
   workflow_dispatch:
 
-# Optional: environment variables can be injected here
-# You can add these variables in your repository Settings - Secrets and variables - Actions - variables
-
-# There are two jobs in this workflow - build and deploy
 jobs:
- # Builds the application for production. 
- # You should configure this environment as close as possible to the production environment, e.g. using Ubuntu for Linux apps, using the same Node version
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
 
-      - name: Install dependencies, build, and test
+      - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
-         # Other scripts if configured should be added here, such as linting, formating
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: dist # This should be your distribution path, not the root path
- 
- # Deploy the application to Azure
+          path: release.zip
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -55,11 +49,14 @@ jobs:
         with:
           name: node-app
 
-      - name: 'Deploy to Azure Web App'
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+
+      - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'tws-frontend'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }} # Publish profile should always be stored as secrets in your repository Settings - Secrets and variables - Actions - secrets
+          app-name: "tws-frontend"
+          slot-name: "Production"
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_93A188EDF1A04E35B8649E285EFA0259 }}
           package: .
